# my-little-pony

./: .dockerignore  .env.example  .gitignore  Dockerfile.apps  LICENSE  README.md  biome.json  docker-compose.gpu.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.husky/: pre-commit
apps/rag-service/: .env.example  .gitignore  Dockerfile  README.md  project.json  pyproject.toml  requirements.txt
apps/rag-service/rag_service/: __init__.py  composition.py  config.py  contracts.py  main_worker.py  observability.py
apps/rag-service/rag_service/adapters/: __init__.py
apps/rag-service/rag_service/adapters/fakes/: __init__.py  fakes.py
apps/rag-service/rag_service/application/: __init__.py  ports.py  retrieval.py  snippet.py
apps/rag-service/rag_service/domain/: __init__.py  models.py
apps/rag-service/scripts/: run-tests.sh
apps/rag-service/tests/: conftest.py  test_answer_context.py  test_answer_generator_for.py  test_answer_question.py  test_answer_question_stream.py  test_answer_stream_endpoint.py  test_config.py  test_config_stream.py  test_consumer_decision.py  test_docling_chunker.py  test_e2e_pipeline.py  test_fake_answer_generator_stream.py  test_index_document.py  test_minio_blob_storage.py  test_nest_content_client.py  test_nest_document_source.py  test_ollama_answer_generator.py  test_openai_answer_generator.py  test_qdrant_index.py  test_rabbitmq.py  test_search_api.py  test_search_documents.py  test_stream_guard.py  test_tei_dense_embedder.py
apps/rag-service/tools/: fake_nest.py
(+356 files in other folders)
