[project]
name = "rag-service"
version = "0.1.0"
description = "Serviço Python (Spec 2) do my-little-pony: indexação e busca híbrida, arquitetura hexagonal."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: testes que carregam modelos/infra reais (mais lentos)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
per-file-ignores = { "tests/*" = ["E501"], "rag_service/adapters/inbound/search_api.py" = ["B008"] }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Domínio e aplicação devem ser tipados com rigor; adapters/infra são mais soltos.
files = ["rag_service"]
check_untyped_defs = true
